--- a/src/app/pages/checkout/billing-address/billing-address.component.html
+++ b/src/app/pages/checkout/billing-address/billing-address.component.html
@@ -1,10 +1,10 @@
 <div role="radio" aria-checked="true" tabindex="0">
-  <div class="group relative cursor-pointer rounded border p-4 hover:border-primary-50 border-primary-100 shadow-sm " [ngClass]="data.selected ? 'bg-primary-50/50' : 'bg-gray-100'" (click)="selectBillingAddress($event)">
-    <p class="mb-3 text-sm font-semibold capitalize text-heading">{{ data.name }}</p>
-    <p class="text-sm text-sub-heading">{{ data.postalAddress.street }}, {{ data.postalAddress.postCode }}, {{ data.postalAddress.city}}, {{ data.postalAddress.stateOrProvince }}, {{ data.postalAddress.country }}</p>
+  <div class="group relative cursor-pointer rounded border p-4 hover:border-primary-50 border-primary-100 shadow-sm " [ngClass]="data.selected ? 'bg-primary-50/50 dark:bg-primary-100' : 'bg-gray-100 dark:bg-secondary-300'" (click)="selectBillingAddress($event)">
+    <p class="mb-3 text-sm font-semibold capitalize text-heading dark:text-white">{{ data.name }}</p>
+    <p class="text-sm text-sub-heading dark:text-gray-200">{{ data.postalAddress.street }}, {{ data.postalAddress.postCode }}, {{ data.postalAddress.city}}, {{ data.postalAddress.stateOrProvince }}, {{ data.postalAddress.country }}</p>
     <div
       class="absolute top-4 flex space-x-2 opacity-0 group-hover:opacity-100 right-4">
-      <button (click)="editBill=true;$event.stopPropagation();" class="flex h-5 w-5 items-center justify-center rounded-full bg-accent text-light"><span
+      <button (click)="editBill=true;$event.stopPropagation();" class="flex h-5 w-5 items-center justify-center rounded-full bg-accent text-light dark:text-white"><span
         class="sr-only">Edit</span>
         <svg class="h-3 w-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
           <path
@@ -26,7 +26,7 @@
 <!-- BILL ADDRESS EDIT modal -->
 @if (editBill){
   <div id="edit-bill-modal" [ngClass]="editBill ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true" class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full shadow-2xl">
-      <div class="w-1/2 relative bg-secondary-50 rounded-lg shadow bg-cover bg-right-bottom" (click)="$event.stopPropagation();">
+      <div class="w-1/2 relative bg-secondary-50 dark:bg-secondary-100 border border-secondary-50 dark:border-gray-800 rounded-lg shadow bg-cover bg-right-bottom" (click)="$event.stopPropagation();">
           <!-- Modal header -->
           <div class="flex items-center justify-between pr-2 pt-2 rounded-t dark:border-gray-600">
               <h5 class="text-xl ml-4 mr-4 font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'BILLING._edit' | translate }}:</h5>
@@ -47,88 +47,35 @@
 
 <!-- BILL ADDRESS DELETE modal -->
 @if (deleteBill){
-  <div id="delete-bill-modal" [ngClass]="deleteBill ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true" class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full shadow-2xl">
-      <div class="w-1/2 relative bg-secondary-50 rounded-lg shadow bg-cover bg-right-bottom" (click)="$event.stopPropagation();">
-          <!-- Modal header -->
-          <div class="flex items-center justify-between pr-2 pt-2 rounded-t dark:border-gray-600">
-              <h5 class="text-xl ml-4 mr-4 font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'BILLING._confirm_delete' | translate }}</h5>
-              <button (click)="deleteBill=false;" type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="delete-bill-modal">
-                  <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
-                  </svg>
-                  <span class="sr-only">{{ 'CARD._close' | translate }}</span>
-              </button>
-          </div>
-          <!-- Modal body -->
-          <div class="w-full h-full">                
-              <div class="grid h-full grid-cols-2 gap-5 m-4">
-                  <div class="col-span-2">
-                      <label for="title" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._title' | translate }}</label>
-                      <p type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                          {{data.name}}
-                      </p>
-                  </div>
-                  <div>
-                      <label for="address.country" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._country' | translate }}</label>
-                      <p class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                          {{data.postalAddress.country}}
-                      </p>
-                  </div>
-                  <div>
-                      <label for="address.city" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._city' | translate }}</label>
-                      <p type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                          {{data.postalAddress.city}}
-                      </p>
-                  </div>
-                  <div>
-                      <label for="address.state" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._state' | translate }}</label>
-                      <p type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                          {{data.postalAddress.stateOrProvince}}
-                      </p>
-                  </div>
-                  <div>
-                      <label for="address.zip" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._post_code' | translate }}</label>
-                      <p type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                          {{data.postalAddress.postCode}}
-                      </p>
-                  </div>
-                  <div class="col-span-2">
-                      <label for="address.street_address" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._street' | translate }}</label>
-                      <p class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                          {{data.postalAddress.street}}
-                      </p>
-                  </div>
-                  <div class="col-span-2">
-                      <label for="email" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._email' | translate }}</label>
-                      <p type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                          {{data.email}}
-                      </p>
-                  </div>
-                  <div>
-                      <label for="phoneType" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._phone_type' | translate }}</label>
-                      <p type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                          {{data.telephoneType}}
-                      </p>
-                  </div>
-                  <div>
-                      <label for="phoneNumber" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._phone' | translate }}</label>                    
-                      <p type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                          {{data.telephoneNumber}}
-                      </p>
-                  </div>
-                  <div class="grid grid-cols-2 gap-4 w-full col-span-2">
-                      <button (click)="deleteBill=false;" class="h-12 w-full bg-primary-100 hover:bg-primary-50 items-center justify-center shrink-0 font-semibold leading-none rounded outline-none transition duration-300 ease-in-out focus:outline-0 focus:shadow focus:ring-1 focus:ring-accent-700 text-white border border-transparent">
-                          {{ 'BILLING._cancel' | translate }}
-                      </button>
-                      <button (click)="onDeletedBill(data)" class="h-12 w-full bg-red-800 hover:bg-red-600 items-center justify-center shrink-0 font-semibold leading-none rounded outline-none transition duration-300 ease-in-out focus:outline-0 focus:shadow focus:ring-1 focus:ring-accent-700 text-white border border-transparent">
-                          {{ 'BILLING._delete' | translate }}
-                      </button>
-                  </div>
+    <div id="delete-bill-modal" [ngClass]="deleteBill ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true" 
+    class="flex overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-modal md:h-full shadow-2xl">
+        <div class="relative p-4 w-full max-w-md h-full md:h-auto" (click)="$event.stopPropagation();">
+            <!-- Modal content -->
+            <div class="relative p-4 text-center bg-secondary-50 dark:bg-secondary-100 rounded-lg shadow sm:p-5">
+                <button type="button" (click)="deleteBill=false;$event.stopPropagation();" class="text-gray-400 absolute top-2.5 right-2.5 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center">
+                    <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+                    </svg>
+                    <span class="sr-only">Close modal</span>
+                </button>
 
-              </div>
-          </div>
-      </div>
-  </div>
+                <svg class="text-gray-400 w-12 h-12 mb-3.5 mx-auto" aria-hidden="true" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd"></path>
+                </svg>                
+                
+                <p class="mb-4 text-gray-500 dark:text-white">{{ 'BILLING._confirm_delete' | translate }}</p>
+                <p class="mb-4 text-gray-500 dark:text-white"><b>{{data.name}}</b>: {{data.postalAddress.street}}, {{data.postalAddress.city}}, {{data.postalAddress.country}}.</p>
+                <div class="flex justify-center items-center space-x-4">
+                    <button (click)="deleteBill=false;$event.stopPropagation();" type="button" class="py-2 px-3 text-sm font-medium text-gray-500 dark:text-white bg-white dark:bg-primary-100 rounded-lg border border-gray-200 dark:border-secondary-300 hover:bg-gray-100 dark:hover:bg-secondary-200 focus:ring-4 focus:outline-none focus:ring-primary-300 hover:text-gray-900 focus:z-10">
+                        {{ 'BILLING._cancel' | translate }}
+                    </button>
+                    <button (click)="onDeletedBill(data)" type="submit" class="py-2 px-3 text-sm font-medium text-center text-white bg-red-800 hover:bg-red-900 rounded-lg focus:ring-4 focus:outline-none focus:ring-red-300">
+                        {{ 'BILLING._delete' | translate }}
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 }
 
